# quant_engine

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml  config_simple.yaml
data/: alpha_gt.csv  prices.csv
data_engine_compatible/: alpha_gt_engine_compatible.csv  prices.csv  sectors.csv
data_fetch/: __init__.py  make_synth_data.py  make_synth_data_engine_compatible.py  make_synth_data_engine_simple.py  make_synth_data_fast.py
data_original/: alpha_gt_original.csv  fundamentals.csv  holdings_prev.csv  prices.csv
scripts/: __init__.py  alpha_capture.py  compare_alpha_gt.py
src/engine/: __init__.py  checks.py  prep.py  risk.py  run_day.py  signals.py  utils.py
src/quant_engine/: __init__.py  checks.py  data_io.py  optimize.py  prep.py  risk.py  run_day.py  signals.py  trade_filters.py  utils.py
src/quant_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_checks.py  test_cli_smoke.py  test_data_io.py  test_data_synth.py  test_optimize.py  test_prep.py  test_risk.py  test_run_day.py  test_signals.py  test_trade_filters.py  test_utils.py
