[project]
name = "quant_engine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "pyyaml",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
qe-run = "quant_engine.run_day:main"

[tool.pytest.ini_options]
# Exclude slow synthetic data tests by default
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Mark slow tests that can be run with: pytest -m "not slow"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# Exclude synthetic data tests by default (they're slow)
norecursedirs = ["data_fetch"] 